# practice_iced

./: .gitignore  Cargo.toml  README.md  build.sh  index.html
src/: main.rs  pages.rs
