[package]
name = "gui-test"
version = "0.1.0"
edition = "2018"

[dependencies]
image = "0.23.6"

[dependencies.iced]
version = "0.1.1"
features = ["image","debug","tokio"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.reqwest]
version = "0.10.2"
features = ["json"]

[dependencies.rand]
version = "0.7"
features = ["wasm-bindgen"]